# media-server-rust

./: Cargo.toml  README.md
src/: list.rs  main.rs  stream.rs  upload.rs
static/: index.html  index1.html
videos/: Screencast From 2025-12-04 12-17-39.webm  access_token_generator.py
